// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal posts controller GET /internal/posts/:urlPart Возвращает пост с авторами 1`] = `
Object {
  "advertisementOff": false,
  "author": "kirillmilesh",
  "authorHelp": "Кирилл Малышев",
  "authors": Array [
    Object {
      "createdAt": "2021-09-08T12:30:35.000Z",
      "id": 1,
      "lastEditedAt": "2021-09-08T12:30:35.000Z",
      "name": "Александр Мирошкин",
      "position": "editor",
      "urlPart": "aleksandr-miroshkin",
    },
    Object {
      "createdAt": "2021-09-08T12:30:35.000Z",
      "id": 2,
      "lastEditedAt": "2021-09-08T12:30:35.000Z",
      "name": "Тестовый автор",
      "position": "editor",
      "urlPart": "testovyi-avtor",
    },
  ],
  "categories": Array [],
  "commentsOff": false,
  "createdAt": "2021-09-08T12:30:35.000Z",
  "draftBlocks": Array [
    Object {
      "text": "Почитайте по новый серийный микрокар",
      "type": "text",
    },
  ],
  "draftMainImage": Object {
    "group-id": 4469561,
    "imagename": "Bezymyannyy.jpg_1631114912561",
    "meta": Object {
      "crc64": "718A85C47CD3164F",
      "md5": "f659619a29aa2c41d80c1d0735a527b6",
      "modification-time": 1631114912,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 791,
        "y": 593,
      },
      "orig-size-bytes": 67431,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1200х1200": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/1200х1200",
        "width": 791,
      },
      "320х320": Object {
        "height": 240,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/320х320",
        "width": 320,
      },
      "460х460": Object {
        "height": 345,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/460х460",
        "width": 460,
      },
      "optimize": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/optimize",
        "width": 791,
      },
      "orig": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/orig",
        "width": 791,
      },
    },
  },
  "draftTitle": "Посмотрите на очень крутую видеорекламу Jeep Wrangler ",
  "id": 1,
  "illustratorHelp": "zen.yandex.by",
  "indexOff": false,
  "lastEditLogin": "kirillmilesh",
  "lastEditedAt": "2021-09-08T12:30:35.000Z",
  "lastOnlineLogin": "avlyalin",
  "lastOnlineTime": "2021-09-09T13:36:14.000Z",
  "lead": "В Сети появилась видеозапись необычной рекламы внедорожника Jeep Wrangler в Северной Америке",
  "mainCategory": "news",
  "mainImageDescription": "Микрокар Microlino",
  "needPublishAt": "2021-09-02T14:00:00.000Z",
  "photographHelp": "Дмитрий Елизаров",
  "publishAt": "2021-09-02T14:00:00.000Z",
  "rssOff": false,
  "service": "autoru",
  "shouldHaveFaqPage": false,
  "status": "publish",
  "subscribeOff": false,
  "tags": Array [],
  "urlPart": "posmotrite-na-ochen-krutuyu-videoreklamu-jeep-wrangler",
}
`;

exports[`Internal posts controller GET /internal/posts/:urlPart Возвращает пост с микроразметкой FAQPage 1`] = `
Object {
  "advertisementOff": false,
  "author": "kirillmilesh",
  "authorHelp": "Кирилл Малышев",
  "authors": Array [],
  "categories": Array [],
  "commentsOff": false,
  "createdAt": "2021-09-08T12:30:35.000Z",
  "draftBlocks": Array [
    Object {
      "text": "Почитайте по новый серийный микрокар",
      "type": "text",
    },
  ],
  "draftMainImage": Object {
    "group-id": 4469561,
    "imagename": "Bezymyannyy.jpg_1631114912561",
    "meta": Object {
      "crc64": "718A85C47CD3164F",
      "md5": "f659619a29aa2c41d80c1d0735a527b6",
      "modification-time": 1631114912,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 791,
        "y": 593,
      },
      "orig-size-bytes": 67431,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1200х1200": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/1200х1200",
        "width": 791,
      },
      "320х320": Object {
        "height": 240,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/320х320",
        "width": 320,
      },
      "460х460": Object {
        "height": 345,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/460х460",
        "width": 460,
      },
      "optimize": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/optimize",
        "width": 791,
      },
      "orig": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/orig",
        "width": 791,
      },
    },
  },
  "draftTitle": "Посмотрите на очень крутую видеорекламу Jeep Wrangler ",
  "faqPageSchemaMarkup": Object {
    "createdAt": "2021-09-08T12:30:35.000Z",
    "id": 1,
    "lastEditedAt": "2021-09-08T12:30:35.000Z",
    "markup": Array [
      Object {
        "mainEntity": Array [],
      },
    ],
    "postId": 1,
    "type": "faqPage",
  },
  "id": 1,
  "illustratorHelp": "zen.yandex.by",
  "indexOff": false,
  "lastEditLogin": "kirillmilesh",
  "lastEditedAt": "2021-09-08T12:30:35.000Z",
  "lastOnlineLogin": "avlyalin",
  "lastOnlineTime": "2021-09-09T13:36:14.000Z",
  "lead": "В Сети появилась видеозапись необычной рекламы внедорожника Jeep Wrangler в Северной Америке",
  "mainCategory": "news",
  "mainImageDescription": "Микрокар Microlino",
  "needPublishAt": "2021-09-02T14:00:00.000Z",
  "photographHelp": "Дмитрий Елизаров",
  "publishAt": "2021-09-02T14:00:00.000Z",
  "rssOff": false,
  "service": "autoru",
  "shouldHaveFaqPage": false,
  "status": "publish",
  "subscribeOff": false,
  "tags": Array [],
  "urlPart": "posmotrite-na-ochen-krutuyu-videoreklamu-jeep-wrangler",
}
`;

exports[`Internal posts controller POST /internal/posts Создает и возвращает новый пост, тримая и приводя urlPart к нижнему регистру 1`] = `
Object {
  "advertisementOff": true,
  "after": "mototirestips",
  "author": "kirillmilesh",
  "authorHelp": "",
  "authors": Array [],
  "before": "bespilotniki-vstali-na-vooruzhenie-gibdd-v-17-regionah-rossii",
  "categories": Array [],
  "commentsOff": true,
  "cover": Object {
    "group-id": 3934100,
    "imagename": "2021-06-04-989f4d66fb364647afc5ab06a4f1c990.jpg_1622801728715",
    "meta": Object {
      "crc64": "9D2DF95C4BF278A8",
      "md5": "4a445fc0e53a37c455b1cc9ef0db58c9",
      "modification-time": 1622801728,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 2000,
        "y": 1125,
      },
      "orig-size-bytes": 1261813,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1200х1200": Object {
        "height": 675,
        "path": "/get-vertis-journal/3934100/2021-06-04-989f4d66fb364647afc5ab06a4f1c990.jpg_1622801728715/1200х1200",
        "width": 1200,
      },
      "320х320": Object {
        "height": 180,
        "path": "/get-vertis-journal/3934100/2021-06-04-989f4d66fb364647afc5ab06a4f1c990.jpg_1622801728715/320х320",
        "width": 320,
      },
      "460х460": Object {
        "height": 259,
        "path": "/get-vertis-journal/3934100/2021-06-04-989f4d66fb364647afc5ab06a4f1c990.jpg_1622801728715/460х460",
        "width": 460,
      },
      "optimize": Object {
        "height": 1125,
        "path": "/get-vertis-journal/3934100/2021-06-04-989f4d66fb364647afc5ab06a4f1c990.jpg_1622801728715/optimize",
        "width": 2000,
      },
      "orig": Object {
        "height": 1125,
        "path": "/get-vertis-journal/3934100/2021-06-04-989f4d66fb364647afc5ab06a4f1c990.jpg_1622801728715/orig",
        "width": 2000,
      },
    },
  },
  "createdAt": "2021-09-08T12:30:35.000Z",
  "draftBlocks": Array [
    Object {
      "text": "Почитайте по новый серийный микрокар",
      "type": "text",
    },
  ],
  "draftMainImage": Object {
    "group-id": 4469561,
    "imagename": "Bezymyannyy.jpg_1631114912561",
    "meta": Object {
      "crc64": "718A85C47CD3164F",
      "md5": "f659619a29aa2c41d80c1d0735a527b6",
      "modification-time": 1631114912,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 791,
        "y": 593,
      },
      "orig-size-bytes": 67431,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1200х1200": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/1200х1200",
        "width": 791,
      },
      "320х320": Object {
        "height": 240,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/320х320",
        "width": 320,
      },
      "460х460": Object {
        "height": 345,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/460х460",
        "width": 460,
      },
      "optimize": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/optimize",
        "width": 791,
      },
      "orig": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/orig",
        "width": 791,
      },
    },
  },
  "draftMainImage4x3": Object {
    "group-id": 4469561,
    "imagename": "Bezymyannyy.jpg_1631114912561",
    "meta": Object {
      "crc64": "718A85C47CD3164F",
      "md5": "f659619a29aa2c41d80c1d0735a527b6",
      "modification-time": 1631114912,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 791,
        "y": 593,
      },
      "orig-size-bytes": 67431,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1200х1200": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/1200х1200",
        "width": 791,
      },
      "320х320": Object {
        "height": 240,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/320х320",
        "width": 320,
      },
      "460х460": Object {
        "height": 345,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/460х460",
        "width": 460,
      },
      "optimize": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/optimize",
        "width": 791,
      },
      "orig": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/orig",
        "width": 791,
      },
    },
  },
  "draftMainImageApp": Object {
    "group-id": 4469561,
    "imagename": "Bezymyannyy.jpg_1631114912561",
    "meta": Object {
      "crc64": "718A85C47CD3164F",
      "md5": "f659619a29aa2c41d80c1d0735a527b6",
      "modification-time": 1631114912,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 791,
        "y": 593,
      },
      "orig-size-bytes": 67431,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1200х1200": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/1200х1200",
        "width": 791,
      },
      "320х320": Object {
        "height": 240,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/320х320",
        "width": 320,
      },
      "460х460": Object {
        "height": 345,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/460х460",
        "width": 460,
      },
      "optimize": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/optimize",
        "width": 791,
      },
      "orig": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/orig",
        "width": 791,
      },
    },
  },
  "draftMainImageRss": Object {
    "group-id": 4469561,
    "imagename": "Bezymyannyy.jpg_1631114912561",
    "meta": Object {
      "crc64": "718A85C47CD3164F",
      "md5": "f659619a29aa2c41d80c1d0735a527b6",
      "modification-time": 1631114912,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 791,
        "y": 593,
      },
      "orig-size-bytes": 67431,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1200х1200": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/1200х1200",
        "width": 791,
      },
      "320х320": Object {
        "height": 240,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/320х320",
        "width": 320,
      },
      "460х460": Object {
        "height": 345,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/460х460",
        "width": 460,
      },
      "optimize": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/optimize",
        "width": 791,
      },
      "orig": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/orig",
        "width": 791,
      },
    },
  },
  "draftTitle": "Серийный микрокар Microlino в стиле BMW Isetta прибавил в мощности и запасе хода (черновик)",
  "draftTitleApp": "Серийный микрокар Microlino в стиле BMW Isetta прибавил в мощности и запасе хода (draft app)",
  "draftTitleRss": "Серийный микрокар Microlino в стиле BMW Isetta прибавил в мощности и запасе хода (draft rss)",
  "id": 1,
  "illustratorHelp": "zen.yandex.by",
  "indexOff": true,
  "lastEditLogin": "kirillmilesh",
  "lastEditedAt": "2021-09-08T12:30:35.000Z",
  "lead": "На выставке IAA рассекретили серийную версию городского микроэлектромобиля Microlino 2.0, назвали его базовую цену и огласили набор модификаций",
  "mainCategory": "news",
  "mainImageDescription": "Микрокар Microlino",
  "mainImageTitle": "Микрокар Microlino",
  "metaDescription": "Статья про серийный микрокар Microlino",
  "metaTitle": "Серийный микрокар Microlino",
  "needPublishAt": "2021-09-02T14:00:00.000Z",
  "photographHelp": "Дмитрий Елизаров",
  "publishAt": "2021-09-02T14:00:00.000Z",
  "rssOff": true,
  "service": "realty",
  "shouldHaveFaqPage": false,
  "status": "draft",
  "subscribeOff": true,
  "tags": Array [],
  "urlPart": "seriyniy-mikrokar-microlino-v-stile-bmw-isetta-pribavil-v-moshchnosti-i-zapase-hoda",
}
`;

exports[`Internal posts controller PUT /internal/posts/:urlPart Обновляет авторов и возвращает модель поста 1`] = `
Object {
  "advertisementOff": false,
  "author": "kirillmilesh",
  "authorHelp": "Александр Мирошкин, Иван Ананьев",
  "authors": Array [
    Object {
      "createdAt": "2021-09-08T12:30:35.000Z",
      "id": 1,
      "lastEditedAt": "2021-09-08T12:30:35.000Z",
      "name": "Александр Мирошкин",
      "position": "editor",
      "urlPart": "aleksandr-miroshkin",
    },
    Object {
      "createdAt": "2021-09-08T12:30:35.000Z",
      "id": 3,
      "lastEditedAt": "2021-09-08T12:30:35.000Z",
      "name": "Иван Ананьев",
      "position": "editor",
      "urlPart": "ivan-ananev",
    },
  ],
  "categories": Array [],
  "commentsOff": false,
  "createdAt": "2021-09-08T12:30:35.000Z",
  "draftBlocks": Array [
    Object {
      "text": "Почитайте по новый серийный микрокар",
      "type": "text",
    },
  ],
  "draftMainImage": Object {
    "group-id": 4469561,
    "imagename": "Bezymyannyy.jpg_1631114912561",
    "meta": Object {
      "crc64": "718A85C47CD3164F",
      "md5": "f659619a29aa2c41d80c1d0735a527b6",
      "modification-time": 1631114912,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 791,
        "y": 593,
      },
      "orig-size-bytes": 67431,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1200х1200": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/1200х1200",
        "width": 791,
      },
      "320х320": Object {
        "height": 240,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/320х320",
        "width": 320,
      },
      "460х460": Object {
        "height": 345,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/460х460",
        "width": 460,
      },
      "optimize": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/optimize",
        "width": 791,
      },
      "orig": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/orig",
        "width": 791,
      },
    },
  },
  "draftTitle": "Посмотрите на очень крутую видеорекламу Jeep Wrangler ",
  "id": 1,
  "illustratorHelp": "zen.yandex.by",
  "indexOff": false,
  "lastEditLogin": "kirillmilesh",
  "lastEditedAt": "2021-09-08T12:30:35.000Z",
  "lastOnlineLogin": "avlyalin",
  "lastOnlineTime": "2021-09-09T13:36:14.000Z",
  "lead": "В Сети появилась видеозапись необычной рекламы внедорожника Jeep Wrangler в Северной Америке",
  "mainCategory": "news",
  "mainImageDescription": "Микрокар Microlino",
  "needPublishAt": "2021-09-02T14:00:00.000Z",
  "photographHelp": "Дмитрий Елизаров",
  "publishAt": "2021-09-02T14:00:00.000Z",
  "rssOff": false,
  "service": "autoru",
  "shouldHaveFaqPage": false,
  "status": "publish",
  "subscribeOff": false,
  "tags": Array [],
  "urlPart": "posmotrite-na-ochen-krutuyu-videoreklamu-jeep-wrangler",
}
`;

exports[`Internal posts controller PUT /internal/posts/:urlPart Обновляет и возвращает модель поста, тримая и приводя urlPart к нижнему регистру 1`] = `
Object {
  "advertisementOff": true,
  "after": "foo",
  "author": "kirillmilesh",
  "authorHelp": "Кирилл Малышев",
  "authors": Array [],
  "before": "bar",
  "blocks": Array [
    Object {
      "text": "Почитайте по новый серийный микрокар",
      "type": "text",
    },
    Object {
      "text": "Microlino в стиле BMW Isetta",
      "type": "text",
    },
  ],
  "categories": Array [],
  "commentsOff": true,
  "cover": Object {
    "group-id": 3934100,
    "imagename": "2021-06-04-989f4d66fb364647afc5ab06a4f1c990.jpg_1622801728715",
    "meta": Object {
      "crc64": "9D2DF95C4BF278A8",
      "md5": "4a445fc0e53a37c455b1cc9ef0db58c9",
      "modification-time": 1622801728,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 2000,
        "y": 1125,
      },
      "orig-size-bytes": 1261813,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1200х1200": Object {
        "height": 675,
        "path": "/get-vertis-journal/3934100/2021-06-04-989f4d66fb364647afc5ab06a4f1c990.jpg_1622801728715/1200х1200",
        "width": 1200,
      },
      "320х320": Object {
        "height": 180,
        "path": "/get-vertis-journal/3934100/2021-06-04-989f4d66fb364647afc5ab06a4f1c990.jpg_1622801728715/320х320",
        "width": 320,
      },
      "460х460": Object {
        "height": 259,
        "path": "/get-vertis-journal/3934100/2021-06-04-989f4d66fb364647afc5ab06a4f1c990.jpg_1622801728715/460х460",
        "width": 460,
      },
      "optimize": Object {
        "height": 1125,
        "path": "/get-vertis-journal/3934100/2021-06-04-989f4d66fb364647afc5ab06a4f1c990.jpg_1622801728715/optimize",
        "width": 2000,
      },
      "orig": Object {
        "height": 1125,
        "path": "/get-vertis-journal/3934100/2021-06-04-989f4d66fb364647afc5ab06a4f1c990.jpg_1622801728715/orig",
        "width": 2000,
      },
    },
  },
  "createdAt": "2021-09-08T12:30:35.000Z",
  "draftBlocks": Array [
    Object {
      "text": "test content",
      "type": "text",
    },
  ],
  "draftMainImage": Object {
    "group-id": 4469561,
    "imagename": "Bezymyannyy.jpg_1631114912561",
    "meta": Object {
      "crc64": "718A85C47CD3164F",
      "md5": "f659619a29aa2c41d80c1d0735a527b6",
      "modification-time": 1631114912,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 791,
        "y": 593,
      },
      "orig-size-bytes": 67431,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1200х1200": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/1200х1200",
        "width": 791,
      },
      "320х320": Object {
        "height": 240,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/320х320",
        "width": 320,
      },
      "460х460": Object {
        "height": 345,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/460х460",
        "width": 460,
      },
      "optimize": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/optimize",
        "width": 791,
      },
      "orig": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/orig",
        "width": 791,
      },
    },
  },
  "draftMainImage4x3": Object {
    "group-id": 4469561,
    "imagename": "Bezymyannyy.jpg_1631114912561",
    "meta": Object {
      "crc64": "718A85C47CD3164F",
      "md5": "f659619a29aa2c41d80c1d0735a527b6",
      "modification-time": 1631114912,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 791,
        "y": 593,
      },
      "orig-size-bytes": 67431,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1200х1200": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/1200х1200",
        "width": 791,
      },
      "320х320": Object {
        "height": 240,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/320х320",
        "width": 320,
      },
      "460х460": Object {
        "height": 345,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/460х460",
        "width": 460,
      },
      "optimize": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/optimize",
        "width": 791,
      },
      "orig": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/orig",
        "width": 791,
      },
    },
  },
  "draftMainImageApp": Object {
    "group-id": 4469561,
    "imagename": "Bezymyannyy.jpg_1631114912561",
    "meta": Object {
      "crc64": "718A85C47CD3164F",
      "md5": "f659619a29aa2c41d80c1d0735a527b6",
      "modification-time": 1631114912,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 791,
        "y": 593,
      },
      "orig-size-bytes": 67431,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1200х1200": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/1200х1200",
        "width": 791,
      },
      "320х320": Object {
        "height": 240,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/320х320",
        "width": 320,
      },
      "460х460": Object {
        "height": 345,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/460х460",
        "width": 460,
      },
      "optimize": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/optimize",
        "width": 791,
      },
      "orig": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/orig",
        "width": 791,
      },
    },
  },
  "draftMainImageRss": Object {
    "group-id": 4469561,
    "imagename": "Bezymyannyy.jpg_1631114912561",
    "meta": Object {
      "crc64": "718A85C47CD3164F",
      "md5": "f659619a29aa2c41d80c1d0735a527b6",
      "modification-time": 1631114912,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 791,
        "y": 593,
      },
      "orig-size-bytes": 67431,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1200х1200": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/1200х1200",
        "width": 791,
      },
      "320х320": Object {
        "height": 240,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/320х320",
        "width": 320,
      },
      "460х460": Object {
        "height": 345,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/460х460",
        "width": 460,
      },
      "optimize": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/optimize",
        "width": 791,
      },
      "orig": Object {
        "height": 593,
        "path": "/get-vertis-journal/4469561/Bezymyannyy.jpg_1631114912561/orig",
        "width": 791,
      },
    },
  },
  "draftTitle": "Закон об электросамокатах: не быстрее 25 км/ч и не тяжелее 35 кг",
  "draftTitleApp": "Закон об электросамокатах: не быстрее 25 км/ч и не тяжелее 35 кг",
  "draftTitleRss": "Закон об электросамокатах: не быстрее 25 км/ч и не тяжелее 35 кг",
  "id": 1,
  "illustratorHelp": "yandex-team.ru",
  "indexOff": true,
  "lastEditLogin": "rbuslov",
  "lastEditedAt": "2021-09-10T14:30:25.000Z",
  "lastOnlineLogin": "avlyalin",
  "lastOnlineTime": "2021-09-09T13:36:14.000Z",
  "lead": "После согласований с ГИБДД и правительством Москвы Минтранс представил финальную версию документа",
  "mainCategory": "video",
  "mainImageDescription": "Закон об электросамокатах",
  "mainImageTitle": "Закон об электросамокатах",
  "metaDescription": "Статья про закон об электросамокатах",
  "metaTitle": "Закон об электросамокатах",
  "needPublishAt": "2021-09-09T16:48:00.000Z",
  "photographHelp": "Кирилл Малышев",
  "publishAt": "2021-09-09T16:48:00.000Z",
  "rssOff": true,
  "service": "autoru",
  "shouldHaveFaqPage": false,
  "status": "publish",
  "subscribeOff": true,
  "tags": Array [],
  "title": "Серийный микрокар Microlino в стиле BMW Isetta прибавил в мощности и запасе хода",
  "titleApp": "Серийный микрокар Microlino в стиле BMW Isetta прибавил в мощности и запасе хода (app)",
  "titleRss": "Серийный микрокар Microlino в стиле BMW Isetta прибавил в мощности и запасе хода (rss)",
  "urlPart": "some-new-url-part",
}
`;
